Fix dark-mode contrast on search excerpt highlights

--- a/src/_includes/css/search.css
+++ b/src/_includes/css/search.css
@@ -133,7 +133,7 @@
 }
 .search-result__excerpt mark {
   background: var(--link-hover-bg);
-  color: inherit;
+  color: var(--link-hover-color);
   font-weight: 700;
   padding: 0 0.1em;
 }
